--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,14 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.main {
+  width: 100vw;
+}
+.layout {
+  max-width: 991px;
+  margin: 0 auto;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
